Feed mutable list to Bansoukou rather than an immutable one